# swe-task-harness

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  push_to_github.py  pyproject.toml
.github/workflows/: tests.yml
examples/: verify_flask.py  verify_pytest.py  verify_requests.py
harness/: __init__.py  cli.py  env_utils.py  git_utils.py  test_runner.py  verifier.py
tests/: test_harness.py
